--- a/check-offer.html
+++ b/check-offer.html
@@ -86,9 +86,9 @@
             
             <div class="w-full grid grid-cols-3 gap-4 sm:gap-6 max-[767px]:grid-cols-1">
               <label class="w-full relative">
-                <input type="radio" name="order" class="peer hidden">
+                <input type="radio" name="order" class="peer hidden" checked>
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border hover:border-[#009FFF] border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/shipped-blue-car.svg" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">Курьер</h5>
@@ -101,7 +101,7 @@
               <label class="w-full relative">
                 <input type="radio" name="order" class="peer hidden">
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border hover:border-[#009FFF] border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/cdek-logo.png" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">СДЭК. Самовывоз</h5>
@@ -114,7 +114,7 @@
               <label class="w-full relative">
                 <input type="radio" name="order" class="peer hidden">
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border hover:border-[#009FFF] border-[#6E6E6E40] h-[220px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/pickup-blue.svg" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center"> Самовывоз</h5>
@@ -160,9 +160,9 @@
 
             <div class="w-full grid grid-cols-4 gap-6 max-[767px]:grid-cols-1">
               <label class="w-full relative">
-                <input type="radio" name="card" class="peer hidden">
+                <input type="radio" name="card" class="peer hidden" checked>
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue hover:border-[#009FFF] transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/card-blue.svg" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">Картой на сайте</h5>
@@ -172,7 +172,7 @@
               <label class="w-full relative">
                 <input type="radio" name="card" class="peer hidden">
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue hover:border-[#009FFF] transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/after-get-blue.svg" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">Картой при получении</h5>
@@ -182,7 +182,7 @@
               <label class="w-full relative">
                 <input type="radio" name="card" class="peer hidden">
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue hover:border-[#009FFF] transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/before-blue.svg" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">Наличными при получении</h5>
@@ -192,7 +192,7 @@
               <label class="w-full relative">
                 <input type="radio" name="card" class="peer hidden">
                 <span class="w-[18px] h-[18px] transition border-[2px] border-[#DBDBDB] absolute top-3 left-3 rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
-                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue transition">
+                <div class="border border-[#6E6E6E40] h-[184px] rounded-[16px] relative p-6 peer-checked:border-blue hover:border-[#009FFF] transition">
                   <div class="flex-jc-c flex-col absolute left-1/2 top-1/2 transform translate-x-[-50%] translate-y-[-50%] w-[90%]">
                     <img src="img/icons/bspb.png" alt="shipped-blue-car">
                     <h5 class="text-[18px] font-medium mt-2 text-center">Через СПБ</h5>
