--- a/catalog.html
+++ b/catalog.html
@@ -650,7 +650,7 @@
 
         <div class="mt-6">
           <div
-              class="w-full grid grid-cols-1 sm:grid-cols-2 min-[1000px]:grid-cols-2 min-[1200px]:grid-cols-3 min-[1600px]:grid-cols-4 gap-6">
+              class="w-full grid grid-cols-1 sm:grid-cols-1 min-[1000px]:grid-cols-1 min-[1100px]:grid-cols-1 min-[1200px]:grid-cols-2 min-[1600px]:grid-cols-4 min-[1500px]:grid-cols-3 gap-6">
             <div data-for="12" class="w-full">
               <div class="w-full h-[427px] border rounded-[16px] relative">
                 <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
@@ -726,14 +726,14 @@
           <button class="px-6 h-[54px] border border-blue rounded-[8px]">Показать еще</button>
         </div>
 
-        <div class="mt-[60px] min-h-[420px] py-[50px] pl-[50px] rounded-[16px] bg-[#F4F4F4] relative">
-          <h2 class="font-lena max-w-[700px] mb-[20px] font-normal text-[#336B46] text-[64px] leading-[100%]">Сапоги для
+        <div class="mt-[60px] min-h-[420px] py-[50px] pl-[50px] max-[1400px]:p-[24px] rounded-[16px] bg-[#F4F4F4] relative max-[1400px]:min-h-[inherit] ">
+          <h2 class="font-lena max-w-[700px] mb-[20px] font-normal text-[#336B46] text-[64px] max-[1400px]:text-[32px] max-[1400px]:mb-[30px] leading-[100%]">Сапоги для
             рыбаков со скидкой 25%!</h2>
           <p class="max-w-[650px] text-[20px] text-[#323232] leading-[110%]">
             Летний сезон в самом разгаре, это значит стартует наша акция.
             Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
           </p>
-          <img src="img/valinki.png" alt="" class="absolute top-0 right-[40px]">
+          <img src="img/valinki.png" alt="" class="absolute top-0 right-[40px] max-[1600px]:w-[20vw] max-[1600px]:right-[10px] max-[1400px]:hidden">
         </div>
 
 
@@ -744,7 +744,7 @@
 
   <div class="container mt-[60px]">
     <h1 class="text-[32px] mb-6">Заголовок СЕО-текста</h1>
-    <div class="w-fill grid grid-cols-2 gap-16">
+    <div class="w-fill grid grid-cols-2 gap-16 max-[1024px]:block">
       <div>
         Традиционно считается, что переднефрикционные катушки применяются в основном в спиннинговой ловле,
         заднефрикционные – для карпфишинга или фидера. Менее распространены в нашей стране мультипликаторные версии, но
